--- a/browser.html
+++ b/browser.html
@@ -35,7 +35,7 @@
     <button onclick="loadPage()">Go</button>
   </div>
   <iframe id="browser" src="https://example.com"></iframe>
-
+<a href="homepage.html">Go to Homepage</a>
   <script>
     function loadPage() {
       const input = document.getElementById("url");
@@ -51,3 +51,4 @@
   </script>
 </body>
 </html>
+
