--- a/index.html
+++ b/index.html
@@ -97,11 +97,15 @@
             <button onclick="location.href='algonquin_apples.html'">Play Algonquin Apples</button>
             <button onclick="location.href='netkareem.html'">NetKareem</button>
             <a href="https://www.youtube.com/@karemeon">youtube: kareemi ismail</a>
+            <a href="https://kareemiismail.itch.io/">itch.io :karemeon</a>
         </div>
     </div>
-    <script> const audio = new Audio('bgmusic.mp3');
+    <script> 
+    const audio = new Audio('bgmusic.mp3');
     audio.loop = true;
-    audio.play();</script>
+    audio.play();
+    </script>
 </body>
 
 </html>
+
