--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             <button onclick="location.href='netkareem.html'">NetKareem</button>
             <a href="https://www.youtube.com/@karemeon">youtube: kareemi ismail</a>
             <a href="https://kareemiismail.itch.io/">itch.io :karemeon</a>
+            <h3>hey, what are you doing here? ;)</h3>
         </div>
     </div>
     <script> 
@@ -108,4 +109,5 @@
 </body>
 
 </html>
+
 
