--- a/index.html
+++ b/index.html
@@ -181,10 +181,11 @@ document.addEventListener('visibilitychange', () => {
   }
 });
 </script>
-    // heh, nobody will ever know that chatgpt did the script.
+    /* heh, nobody will ever know that chatgpt did the script. */
 </body>
 
 </html>
+
 
 
 
