--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
         </div>
     </div>
    <script>
+       /*
+heh, nobody will ever know that chatgpt did the script.
+*/
 const statusEl = document.getElementById('status');
 function setStatus(s){ statusEl.textContent = s; }
 
@@ -181,10 +184,11 @@ document.addEventListener('visibilitychange', () => {
   }
 });
 </script>
-    /* heh, nobody will ever know that chatgpt did the script. */
+
 </body>
 
 </html>
+
 
 
 
