--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="game-buttons">
             <button onclick="location.href='the thing.html'">Play SandBox</button>
             <button onclick="location.href='minecraft.html'">Play Meincraft</button>
-            <button onclick="location.href='Solar.html'">Play Solar System.io</button>
+            <button onclick="location.href='solar.html'">Play Solar System.io</button>
             <button onclick="location.href='2dPlat.html'">My Platformer</button>
             <button onclick="location.href='Bullet Dodger 1.html'">Play Bullet Dodger</button>
             <button onclick="location.href='algonquin_apples.html'">Play Algonquin Apples</button>
@@ -188,6 +188,7 @@ document.addEventListener('visibilitychange', () => {
 </body>
 
 </html>
+
 
 
 
