--- a/index.html
+++ b/index.html
@@ -137,16 +137,17 @@
     btn.addEventListener('click', () => {
       if (music.paused) {
         music.play();
-        btn.textContent = "🎵"; // Pause icon
+        btn.textContent = "Pause"; // Pause icon
       } else {
         music.pause();
-        btn.textContent = "⏸️"; // Music note icon
+        btn.textContent = "Play"; // Music note icon
       }
     });
   </script>
 </body>
 
 </html>
+
 
 
 
