--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </header>
     
 
-  <button id="emojiBtn" title="Play/Pause Music">🎵</button>
+  <button id="emojiBtn" title="Play/Pause Music">Play</button>
   <audio id="bgmusic" src="bgmusic.mp3" loop></audio>
 
 
@@ -147,6 +147,7 @@
 </body>
 
 </html>
+
 
 
 
