--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
             <button onclick="location.href='Bullet Dodger 1.html'">Play Bullet Dodger</button>
             <button onclick="location.href='algonquin_apples.html'">Play Algonquin Apples</button>
             <button onclick="location.href='netkareem.html'">NetKareem</button>
+            <button onclick="location.href='vidtube.html'">VidTube</button>
             <a href="https://www.youtube.com/@karemeon">youtube: kareemi ismail</a>
             <a href="https://kareemiismail.itch.io/">itch.io: karemeon</a>
             <h3>hey, what are you doing here? ;)</h3>
@@ -148,6 +149,7 @@
 </body>
 
 </html>
+
 
 
 
