--- a/index.html
+++ b/index.html
@@ -117,14 +117,16 @@
 
     <div class="container">
         <div class="game-buttons">
-            <button onclick="location.href='the thing.html'">Play SandBox</button>
-            <button onclick="location.href='minecraft.html'">Play Meincraft</button>
-            <button onclick="location.href='solar.html'">Play Solar System.io</button>
-            <button onclick="location.href='2dPlat.html'">My Platformer</button>
-            <button onclick="location.href='Bullet Dodger 1.html'">Play Bullet Dodger</button>
-            <button onclick="location.href='algonquin_apples.html'">Play Algonquin Apples</button>
-            <button onclick="location.href='netkareem.html'">NetKareem</button>
-            <button onclick="location.href='vidtube.html'">VidTube</button>
+  <div class="gallery">
+    <a href="Bullet Dodger 1.html" class="game-card" target="_blank" rel="noopener">
+      <img src="bullet photot.png" alt="Game 1" />
+      <div class="title">Bullet Dodger</div>
+    </a>
+       <div class="gallery">
+    <a href="algonquin_apples.html" class="game-card" target="_blank" rel="noopener">
+      <img src="algonquin.png" alt="Game 1" />
+      <div class="title">algonquin apples</div>
+    </a>
             <a href="https://www.youtube.com/@karemeon">youtube: kareemi ismail</a>
             <a href="https://kareemiismail.itch.io/">itch.io: karemeon</a>
             <h3>hey, what are you doing here? ;)</h3>
@@ -149,6 +151,7 @@
 </body>
 
 </html>
+
 
 
 
