--- a/index.html
+++ b/index.html
@@ -24,47 +24,61 @@
             50% { background-position: 100% 50%; }
             100% { background-position: 0% 50%; }
             }
-        
-        header {
-            background: #222;
-            color: #fff;
-            padding: 2rem 0 1rem 0;
-        }
-        h1 {
-            margin: 0;
-            font-size: 2.5rem;
-        }
-        .container {
-            margin: 2rem auto;
-            max-width: 600px;
-            background: #b8b8b8;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-            padding: 2rem;
-            height: 100vh;
-            background: linear-gradient(270deg, red, orange, yellow, green, blue, indigo, violet);
-            background-size: 1400% 1400%;
-            animation: rainbow 10s ease infinite;
-        }
-        .game-buttons {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-            margin-top: 2rem;
-        }
-        .game-buttons button {
-            padding: 1rem;
-            font-size: 1.2rem;
-            border: none;
-            border-radius: 5px;
-            background: #25254d;
-            color: #fff;
-            cursor: pointer;
-            transition: background 0.2s;
-        }
-        .game-buttons button:hover {
-            background: #005fa3;
-        }
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #fefefe;
+      margin: 0;
+      padding: 40px 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    h1 {
+      margin-bottom: 30px;
+      color: #222;
+    }
+
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 24px;
+      width: 100%;
+      max-width: 960px;
+    }
+
+    .game-card {
+      cursor: pointer;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 4px 12px rgb(0 0 0 / 0.1);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      background: white;
+      text-align: center;
+      text-decoration: none;
+      color: inherit;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .game-card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 8px 20px rgb(0 0 0 / 0.15);
+    }
+
+    .game-card img {
+      width: 100%;
+      height: 140px;
+      object-fit: cover;
+      display: block;
+    }
+
+    .game-card .title {
+      padding: 12px 16px;
+      font-weight: 600;
+      font-size: 1.1rem;
+    }
           a {
         font-weight: bold;
         text-decoration: none;
@@ -151,6 +165,7 @@
 </body>
 
 </html>
+
 
 
 
