--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
       <img src="algonquin.png" alt="Game 1" />
       <div class="title">algonquin apples</div>
     </a>
+                  <div class="gallery">
+    <a href="vidtube.html" class="game-card" target="_blank" rel="noopener">
+      <img src="vidtube.png" alt="Game 1" />
+      <div class="title">vidtube</div>
+    </a>
             <a href="https://www.youtube.com/@karemeon">youtube: kareemi ismail</a>
             <a href="https://kareemiismail.itch.io/">itch.io: karemeon</a>
             <h3>hey, what are you doing here? ;)</h3>
@@ -165,6 +170,7 @@
 </body>
 
 </html>
+
 
 
 
