--- a/2dPlat.html
+++ b/2dPlat.html
@@ -1,198 +1,246 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>2D Platformer with Enemies and Collectibles</title>
-  <style>
-    body {
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: #87ceeb;
-    }
-    canvas {
-      display: block;
-      background: #d0f4f7;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>2D Platformer - Fullscreen with Coins & Enemies</title>
+<style>
+  body, html {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background: linear-gradient(to top, #0b3d91, #1e90ff);
+    font-family: Arial, sans-serif;
+    color: white;
+  }
+  #score {
+    position: fixed;
+    top: 15px;
+    left: 15px;
+    font-size: 20px;
+    font-weight: bold;
+    text-shadow: 1px 1px 3px #000;
+    z-index: 10;
+  }
+  canvas {
+    display: block;
+    background: transparent;
+  }
+</style>
 </head>
 <body>
-  <canvas id="gameCanvas" width="800" height="400"></canvas>
 
-  <script>
-    const canvas = document.getElementById('gameCanvas');
-    const ctx = canvas.getContext('2d');
+<div id="score">Score: 0</div>
+<canvas id="gameCanvas"></canvas>
 
-    const gravity = 0.6;
-    const friction = 0.8;
+<script>
+  const canvas = document.getElementById('gameCanvas');
+  const ctx = canvas.getContext('2d');
+  const scoreEl = document.getElementById('score');
 
-    let score = 0;
+  function resize() {
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+  }
+  window.addEventListener('resize', resize);
+  resize();
 
-    const player = {
-      x: 100,
-      y: 0,
-      width: 40,
-      height: 40,
-      color: 'red',
-      dx: 0,
-      dy: 0,
-      speed: 4,
-      jumpPower: -12,
-      grounded: false
-    };
+  // Player setup
+  const player = {
+    x: 50,
+    y: 0,
+    width: 40,
+    height: 60,
+    color: '#ffeb3b',
+    velocityY: 0,
+    speedX: 5,
+    gravity: 0.7,
+    jumpStrength: 15,
+    onGround: false,
+    score: 0,
+    respawn() {
+      this.x = 50;
+      this.y = 0;
+      this.velocityY = 0;
+    }
+  };
 
-    // Platforms array (including ground)
-    const platforms = [
-      { x: 0, y: 350, width: 800, height: 50, color: 'green' }, // ground
-      { x: 200, y: 280, width: 120, height: 10, color: '#444' },
-      { x: 400, y: 230, width: 100, height: 10, color: '#444' },
-      { x: 600, y: 180, width: 100, height: 10, color: '#444' },
-      { x: 100, y: 150, width: 80, height: 10, color: '#444' },
-      { x: 350, y: 150, width: 100, height: 10, color: 'blue' }  // moving platform
-    ];
+  const keys = {};
+  window.addEventListener('keydown', e => keys[e.code] = true);
+  window.addEventListener('keyup', e => keys[e.code] = false);
 
-    const keys = {};
-    document.addEventListener('keydown', e => keys[e.code] = true);
-    document.addEventListener('keyup', e => keys[e.code] = false);
+  let platforms = [];
+  let coins = [];
+  let enemies = [];
 
-    // Enemies (moving back and forth)
-    const enemies = [
-      { x: 250, y: 230, width: 40, height: 40, color: 'purple', dx: 1, speed: 1, direction: 1 },
-      { x: 500, y: 180, width: 40, height: 40, color: 'purple', dx: 1, speed: 1, direction: -1 }
-    ];
+  // Generate random platforms
+  function generatePlatforms() {
+    platforms = [];
+    const platformCount = 10;
+    for (let i = 0; i < platformCount; i++) {
+      let width = 100 + Math.random() * 100;
+      let height = 20;
+      let x = Math.random() * (canvas.width - width);
+      let y = Math.random() * (canvas.height - height);
+      platforms.push({x, y, width, height});
+    }
+  }
 
-    // Collectibles (coins)
-    const collectibles = [
-      { x: 250, y: 220, width: 20, height: 20, color: 'yellow', collected: false },
-      { x: 400, y: 120, width: 20, height: 20, color: 'yellow', collected: false },
-      { x: 600, y: 90, width: 20, height: 20, color: 'yellow', collected: false }
-    ];
-
-    function update() {
-      // Movement
-      if (keys['ArrowRight']) player.dx = player.speed;
-      else if (keys['ArrowLeft']) player.dx = -player.speed;
-      else player.dx *= friction;
-
-      if (keys['ArrowUp'] && player.grounded) {
-        player.dy = player.jumpPower;
-        player.grounded = false;
+  // Generate coins on some platforms
+  function generateCoins() {
+    coins = [];
+    for (const plat of platforms) {
+      if (Math.random() < 0.7) { // 70% chance to have a coin
+        let coinX = plat.x + plat.width / 2 - 10;
+        let coinY = plat.y - 20;
+        coins.push({x: coinX, y: coinY, radius: 10, collected: false});
       }
+    }
+  }
 
-      player.dy += gravity;
-      player.x += player.dx;
-      player.y += player.dy;
-
-      player.grounded = false;
-
-      // Check collision with platforms
-      for (const p of platforms) {
-        // Player collides with platform from above (jumping)
-        if (
-          player.x + player.width > p.x &&
-          player.x < p.x + p.width &&
-          player.y + player.height > p.y &&
-          player.y + player.height < p.y + p.height &&
-          player.dy >= 0
-        ) {
-          player.y = p.y - player.height;
-          player.dy = 0;
-          player.grounded = true;
-        }
-
-        // Prevent player from passing through platforms below
-        if (
-          player.x + player.width > p.x &&
-          player.x < p.x + p.width &&
-          player.y < p.y + p.height &&
-          player.y > p.y &&
-          player.dy <= 0
-        ) {
-          player.y = p.y + p.height;
-          player.dy = 0;
-        }
-
-        // Moving platform (horizontal movement)
-        if (p.color === 'blue') {
-          p.x += p.direction * p.speed;
-          if (p.x <= 200 || p.x >= 600) p.direction *= -1;  // Move between 200 and 600
-        }
+  // Generate enemies on some platforms
+  function generateEnemies() {
+    enemies = [];
+    for (const plat of platforms) {
+      if (Math.random() < 0.5) { // 50% chance to have an enemy
+        let enemyWidth = 40;
+        let enemyHeight = 40;
+        let enemyX = plat.x + 10;
+        let enemyY = plat.y - enemyHeight;
+        enemies.push({
+          x: enemyX,
+          y: enemyY,
+          width: enemyWidth,
+          height: enemyHeight,
+          speed: 2 * (Math.random() > 0.5 ? 1 : -1), // Random direction
+          platformXStart: plat.x,
+          platformXEnd: plat.x + plat.width - enemyWidth,
+        });
       }
+    }
+  }
 
-      // Check for collision with enemies
-      for (const e of enemies) {
-        if (
-          player.x + player.width > e.x &&
-          player.x < e.x + e.width &&
-          player.y + player.height > e.y &&
-          player.y < e.y + e.height
-        ) {
-          // Reset player position if they hit an enemy
-          player.x = 100;
-          player.y = 0;
-          player.dy = 0;
-          score -= 5; // Lose points on collision
-        }
-      }
+  generatePlatforms();
+  generateCoins();
+  generateEnemies();
 
-      // Check for collision with collectibles (coins)
-      for (const c of collectibles) {
-        if (
-          player.x + player.width > c.x &&
-          player.x < c.x + c.width &&
-          player.y + player.height > c.y &&
-          player.y < c.y + c.height &&
-          !c.collected
-        ) {
-          c.collected = true;
-          score += 10; // Gain points on collection
-        }
-      }
+  // Collision detection helper
+  function isColliding(rect1, rect2) {
+    return !(rect1.x > rect2.x + rect2.width ||
+             rect1.x + rect1.width < rect2.x ||
+             rect1.y > rect2.y + rect2.height ||
+             rect1.y + rect1.height < rect2.y);
+  }
 
-      draw();
-      requestAnimationFrame(update);
+  // Check collision between circle and rect (for coins)
+  function circleRectCollision(circle, rect) {
+    const distX = Math.abs(circle.x - rect.x - rect.width / 2);
+    const distY = Math.abs(circle.y - rect.y - rect.height / 2);
+
+    if (distX > (rect.width / 2 + circle.radius)) { return false; }
+    if (distY > (rect.height / 2 + circle.radius)) { return false; }
+
+    if (distX <= (rect.width / 2)) { return true; }
+    if (distY <= (rect.height / 2)) { return true; }
+
+    const dx = distX - rect.width / 2;
+    const dy = distY - rect.height / 2;
+    return (dx * dx + dy * dy <= (circle.radius * circle.radius));
+  }
+
+  function gameLoop() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+    // Player movement left/right
+    if (keys['ArrowLeft'] || keys['KeyA']) {
+      player.x -= player.speedX;
+    }
+    if (keys['ArrowRight'] || keys['KeyD']) {
+      player.x += player.speedX;
     }
 
-    function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
+    // Apply gravity
+    player.velocityY += player.gravity;
+    player.y += player.velocityY;
 
-      // Draw platforms
-      for (const p of platforms) {
-        ctx.fillStyle = p.color;
-        ctx.fillRect(p.x, p.y, p.width, p.height);
+    // Prevent going off left/right edges
+    if (player.x < 0) player.x = 0;
+    if (player.x + player.width > canvas.width) player.x = canvas.width - player.width;
+
+    // Check collision with platforms
+    player.onGround = false;
+    for (const plat of platforms) {
+      if (player.velocityY >= 0 &&
+          player.x < plat.x + plat.width &&
+          player.x + player.width > plat.x &&
+          player.y + player.height > plat.y &&
+          player.y + player.height < plat.y + plat.height) {
+        player.y = plat.y - player.height;
+        player.velocityY = 0;
+        player.onGround = true;
       }
-
-      // Draw enemies
-      for (const e of enemies) {
-        ctx.fillStyle = e.color;
-        ctx.fillRect(e.x, e.y, e.width, e.height);
-      }
-
-      // Draw collectibles (coins)
-      for (const c of collectibles) {
-        if (!c.collected) {
-          ctx.fillStyle = c.color;
-          ctx.beginPath();
-          ctx.arc(c.x + c.width / 2, c.y + c.height / 2, c.width / 2, 0, Math.PI * 2);
-          ctx.fill();
-        }
-      }
-
-      // Draw player
-      ctx.fillStyle = player.color;
-      ctx.fillRect(player.x, player.y, player.width, player.height);
-
-      // Display score
-      ctx.fillStyle = 'black';
-      ctx.font = '20px Arial';
-      ctx.fillText('Score: ' + score, 10, 30);
     }
 
-    update();
-  </script>
+    // Jumping
+    if ((keys['Space'] || keys['ArrowUp'] || keys['KeyW']) && player.onGround) {
+      player.velocityY = -player.jumpStrength;
+      player.onGround = false;
+    }
+
+    // Check collision with coins
+    for (const coin of coins) {
+      if (!coin.collected && circleRectCollision(coin, player)) {
+        coin.collected = true;
+        player.score++;
+        scoreEl.textContent = 'Score: ' + player.score;
+      }
+    }
+
+    // Move and draw enemies
+    ctx.fillStyle = '#d32f2f'; // red enemy color
+    for (const enemy of enemies) {
+      enemy.x += enemy.speed;
+      if (enemy.x < enemy.platformXStart || enemy.x > enemy.platformXEnd) {
+        enemy.speed *= -1; // Reverse direction
+      }
+      ctx.fillRect(enemy.x, enemy.y, enemy.width, enemy.height);
+
+      // Check collision with player
+      if (isColliding(player, enemy)) {
+        // Reset player position and score
+        player.respawn();
+        player.score = 0;
+        scoreEl.textContent = 'Score: ' + player.score;
+      }
+    }
+
+    // Draw coins
+    for (const coin of coins) {
+      if (!coin.collected) {
+        ctx.beginPath();
+        ctx.arc(coin.x, coin.y, coin.radius, 0, Math.PI * 2);
+        ctx.fillStyle = '#ffd700'; // gold coin color
+        ctx.fill();
+        ctx.strokeStyle = '#b8860b';
+        ctx.lineWidth = 2;
+        ctx.stroke();
+      }
+    }
+
+    // Draw player
+    ctx.fillStyle = player.color;
+    ctx.fillRect(player.x, player.y, player.width, player.height);
+
+    // Draw platforms
+    ctx.fillStyle = '#0f9d58';
+    for (const plat of platforms) {
+      ctx.fillRect(plat.x, plat.y, plat.width, plat.height);
+    }
+
+    requestAnimationFrame(gameLoop);
+  }
+
+  gameLoop();
+</script>
 </body>
 </html>
-
