--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </head>
 <body>
 
-<div class="torture-text">(i torture chatgpt here *and myself)</div>
+<div class="torture-text">i torture chatgpt here* (*and myself)</div>
 
 <div class="gallery">
   <a href="vidtube.html" class="game-button" target="_blank" rel="noopener">Vidtube</a>
@@ -96,5 +96,6 @@
 
 </body>
 </html>
+
 
 
