--- a/index.html
+++ b/index.html
@@ -90,12 +90,13 @@
   <a href="algonquin_apples.html" class="game-button" target="_blank" rel="noopener">Algonquin Apples</a>
   <a href="minecraft.html" class="game-button" target="_blank" rel="noopener">Meincraft</a>
   <a href="netkareem.html" class="game-button" target="_blank" rel="noopener">NetKareem</a>
-  <a href="solar.html" class="game-button" target="_blank" rel="noopener">Solar</a>
+  <a href="solar.html" class="game-button" target="_blank" rel="noopener">Solar Sandbox</a>
   <a href="the thing.html" class="game-button" target="_blank" rel="noopener">Sandbox</a>
 </div>
 
 </body>
 </html>
+
 
 
 
