--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <a href="algonquin_apples.html" class="game-button" target="_blank" rel="noopener">Algonquin Apples</a>
   <a href="minecraft.html" class="game-button" target="_blank" rel="noopener">Minecraft</a>
   <a href="netkareem.html" class="game-button" target="_blank" rel="noopener">NetKareem</a>
-  <a href="solar.html" class="game-button" target="_blank" rel="noopener">Solar System Sanbox</a>
+  <a href="solar.html" class="game-button" target="_blank" rel="noopener">Solar System Sandbox</a>
   <a href="the thing.html" class="game-button" target="_blank" rel="noopener">Sandbox</a>
 </div>
 
@@ -128,6 +128,7 @@
 
 </body>
 </html>
+
 
 
 
