--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <div class="torture-text">i torture chatgpt here* (*and myself)</div>
 
 <div class="gallery">
-  <a href="vidtube.html" class="game-button" target="_blank" rel="noopener">Vidtube</a>
+  <a href="vidtube.html" class="game-button" target="_blank" rel="noopener">Vidtube (NEW!)</a>
   <a href="Bullet Dodger 1.html" class="game-button" target="_blank" rel="noopener">Bullet Dodger 1</a>
   <a href="2dPlat.html" class="game-button" target="_blank" rel="noopener">2dPlat</a>
   <a href="algonquin_apples.html" class="game-button" target="_blank" rel="noopener">Algonquin Apples</a>
@@ -101,6 +101,7 @@
   <a href="netkareem.html" class="game-button" target="_blank" rel="noopener">NetKareem</a>
   <a href="solar.html" class="game-button" target="_blank" rel="noopener">Solar System Sandbox</a>
   <a href="the thing.html" class="game-button" target="_blank" rel="noopener">Sandbox</a>
+  <a href="Tsunami Survival!.html" class="game-button" target="_blank" rel="noopener">Tsunami Survival! (NEW!)</a>
 </div>
 
 <audio id="bgMusic" src="bgmusic.mp3" loop autoplay></audio>
@@ -129,6 +130,7 @@
 
 </body>
 </html>
+
 
 
 
