--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
   <a href="solar.html" class="game-button" target="_blank" rel="noopener">Solar System Sandbox</a>
   <a href="the thing.html" class="game-button" target="_blank" rel="noopener">Sandbox</a>
   <a href="Tsunami Survival!.html" class="game-button" target="_blank" rel="noopener">Tsunami Survival! (NEW!)</a>
+  <a href="citysim.html" class="game-button" target="_blank" rel="noopener">Kareem's City Simulator (NEW!)</a>
 </div>
 
 <audio id="bgMusic" src="bgmusic.mp3" loop autoplay></audio>
@@ -130,6 +131,7 @@
 
 </body>
 </html>
+
 
 
 
