--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <h1>Welcome to KareemWeb!</h1>
 
 <div class="torture-text">i torture chatgpt here* (*and myself)</div>
-
+ <a href="about me.html" class="game-button" target="_blank" rel="noopener">About Me</a>
 <div class="gallery">
   <a href="vidtube.html" class="game-button" target="_blank" rel="noopener">Vidtube (NEW!)</a>
   <a href="Bullet Dodger 1.html" class="game-button" target="_blank" rel="noopener">Bullet Dodger 1</a>
@@ -131,6 +131,7 @@
 
 </body>
 </html>
+
 
 
 
