--- a/about me.html
+++ b/about me.html
@@ -8,6 +8,7 @@
 <body>
     <h1>About me</h1>
     <p>since i learnt how to code html, (or maybe after i asked chatgpt to make me a game) i wanted to have my own website. that's all basically</p>
-    <a href="kareemweb.com">back</a>
+    <a href="index.html">back</a>
 </body>
+
 </html>
