--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
   <a href="Tsunami Survival!.html" class="game-button" target="_blank" rel="noopener">Tsunami Survival!</a>
   <a href="citysim.html" class="game-button" target="_blank" rel="noopener">Kareem's City Simulator</a>
 </div>
+  <p>credits to impossible quiz for music</p>
 
-<audio id="bgMusic" src="bgmusic.mp3" loop autoplay></audio>
+<audio id="bgMusic" src="impossiblemusic.mp3" loop autoplay></audio>
 <button id="musicToggle" aria-label="Toggle music">🔊</button>
 
 <script>
@@ -131,6 +132,7 @@
 
 </body>
 </html>
+
 
 
 
