--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 </div>
   <p>credits to impossible quiz for music</p>
 
-<audio id="bgMusic" src="impossiblemusic.mp3" loop autoplay></audio>
+<audio id="bgMusic" src="impossiblemusic.mp3.mp3" loop autoplay></audio>
 <button id="musicToggle" aria-label="Toggle music">🔊</button>
 
 <script>
@@ -132,6 +132,7 @@
 
 </body>
 </html>
+
 
 
 
