--- a/homepagev2.html
+++ b/homepagev2.html
@@ -62,7 +62,7 @@
       <div class="title">Bullet Dodger</div>
     </a>
     <a href="Tsunami Survival!.html" class="card">
-      <img src="algonquin.png" alt="Tsunami Survival" class="thumb" />
+      <img src="tsunami.png" alt="Tsunami Survival" class="thumb" />
       <div class="title">Tsunami Survival</div>
     </a>
     <a href="citysim.html" class="card">
