--- a/homepagev2.html
+++ b/homepagev2.html
@@ -5,6 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>KareemWeb - Homepage V2</title>
 <style>
+  a {
+  color: #7dd3fc;
+  text-decoration: none;
+}
+a:hover {
+  color: #38bdf8;
+}
   body {
     font-family: Arial, sans-serif;
     margin: 0;
