--- a/about me.html
+++ b/about me.html
@@ -5,10 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
 </head>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+
+h1, h2, h3, p {
+  font-family: 'Poppins', sans-serif;
+  color: #f472b6;
+}
+    </style>
 <body>
     <h1>About me</h1>
-    <p>since i learnt how to code html, (or maybe after i asked chatgpt to make me a game) i wanted to have my own website. that's all basically</p>
+    <p>since i learnt how to code html, (or maybe after i asked chatgpt to make me a game) i wanted to have my own website. that's all basically
+    go play neal's games, (neal.fun) he's the one i got inspired to make a photo homepage (homepage v2)</p>
     <a href="index.html">back</a>
 </body>
 
 </html>
+
