--- a/index.html
+++ b/index.html
@@ -90,44 +90,89 @@
 <body>
   <h1>Welcome to KareemWeb!</h1>
   <a href= "homepagev2.html">new homepage</a>
-<div id="visit-counter" style="display:inline-block;"></div>
+<div id="visit-counter" style="display:flex;"></div>
+
+<style>
+  #visit-counter {
+    font-family: 'Courier New', monospace;
+    display: flex;
+    gap: 2px;
+  }
+
+  .digit {
+    position: relative;
+    width: 1.2em;
+    height: 2em;
+    background: #000;
+    color: #0f0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+    box-shadow: 0 0 5px #0f0;
+    perspective: 400px;
+  }
+
+  .digit span {
+    display: block;
+    transform-origin: top;
+    transition: transform 0.3s;
+  }
+
+  .digit.flip span {
+    transform: rotateX(-180deg);
+  }
+</style>
 
 <script>
-  // Counter container
   const container = document.getElementById('visit-counter');
+  const DIGITS = 10;
+  let currentNumber = Array(DIGITS).fill(0);
 
-  // Styles specific to the counter
-  const style = document.createElement('style');
-  style.textContent = `
-    #visit-counter {
-      font-family: 'Courier New', monospace;
-      font-size: 2em;
-      letter-spacing: 0.1em;
-      background: #000;
-      color: #0f0;
-      padding: 5px 15px;
-      border-radius: 5px;
-      box-shadow: 0 0 10px #0f0;
-      display: inline-block;
-    }
-  `;
-  document.head.appendChild(style);
+  // Create digit elements
+  const digits = [];
+  for (let i = 0; i < DIGITS; i++) {
+    const div = document.createElement('div');
+    div.className = 'digit';
+    const span = document.createElement('span');
+    span.textContent = '0';
+    div.appendChild(span);
+    container.appendChild(div);
+    digits.push(span);
+  }
 
-  // Fetch and display the counter
-  async function updateCounter() {
+  async function fetchCount() {
     try {
       const response = await fetch('https://api.countapi.xyz/hit/kareemweb/visits');
       const data = await response.json();
-      let count = data.value;
-      // Pad the number to 10 digits with leading zeros
-      container.textContent = count.toString().padStart(10, '0');
+      return data.value.toString().padStart(DIGITS, '0').split('').map(Number);
     } catch (err) {
-      container.textContent = '0000000001';
       console.error('Failed to fetch counter:', err);
+      return Array(DIGITS).fill(0);
     }
   }
 
+  async function updateCounter() {
+    const newNumber = await fetchCount();
+
+    newNumber.forEach((num, i) => {
+      if (num !== currentNumber[i]) {
+        // Animate flip
+        digits[i].parentElement.classList.add('flip');
+        setTimeout(() => {
+          digits[i].textContent = num;
+          digits[i].parentElement.classList.remove('flip');
+        }, 150);
+      }
+    });
+
+    currentNumber = newNumber;
+  }
+
   updateCounter();
+
+  // Optional: refresh every 10 seconds
+  setInterval(updateCounter, 10000);
 </script>
 
 
@@ -182,6 +227,7 @@
 
 </body>
 </html>
+
 
 
 
