--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
 
 <div class="torture-text">i torture chatgpt here* (*and myself)</div>
  <a href="about me.html" class="game-button" target="_blank" rel="noopener">About Me</a>
+  <a href="MusicPlayer.html" class="game-button" target="_blank" rel="noopener">Kareem's Music Player (NEW!)</a>
 <div class="gallery">
   <a href="vidtube.html" class="game-button" target="_blank" rel="noopener">Vidtube</a>
   <a href="Bullet Dodger 1.html" class="game-button" target="_blank" rel="noopener">Bullet Dodger 1</a>
@@ -222,6 +223,7 @@
 
 </body>
 </html>
+
 
 
 
