--- a/MusicPlayer.html
+++ b/MusicPlayer.html
@@ -49,9 +49,9 @@
 
 <!-- Song selection -->
 <select id="songSelect">
-    <option value="1.mp3">1. 1.mp3</option>
-    <option value="bgmusic.mp3">2. bgmusic.mp3</option>
-    <option value="impossiblemusic.mp3.mp3">3. impossiblemusic.mp3.mp3</option>
+    <option value="1.mp3">1. Left Bank Two</option>
+    <option value="bgmusic.mp3">2. Kevin Macleod - Elevator Music</option>
+    <option value="impossiblemusic.mp3.mp3">3. Impossible Quiz</option>
 </select>
 <button onclick="playSong()">Play</button>
 
