--- a/MusicPlayer.html
+++ b/MusicPlayer.html
@@ -52,6 +52,7 @@
     <option value="1.mp3">1. Left Bank Two</option>
     <option value="bgmusic.mp3">2. Kevin Macleod - Elevator Music</option>
     <option value="impossiblemusic.mp3.mp3">3. Impossible Quiz</option>
+    <option value="Kevin Macleod - Airport Lounge.mp3">4. Kevin Macleod - Airport Lounge</option>
 </select>
 <button onclick="playSong()">Play</button>
 
