--- a/MusicPlayer.html
+++ b/MusicPlayer.html
@@ -50,9 +50,9 @@
 <!-- Song selection -->
 <select id="songSelect">
     <option value="1.mp3">1. Left Bank Two</option>
-    <option value="bgmusic.mp3">2. Kevin Macleod - Elevator Music</option>
+    <option value="bgmusic.mp3">2. Kevin MacLeod - Elevator Music</option>
     <option value="impossiblemusic.mp3.mp3">3. Impossible Quiz</option>
-    <option value="Kevin Macleod - Airport Lounge.mp3">4. Kevin Macleod - Airport Lounge</option>
+    <option value="Kevin MacLeod - Airport Lounge.mp3">4. Kevin MacLeod - Airport Lounge</option>
 </select>
 <button onclick="playSong()">Play</button>
 
