--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
   <a href="the thing.html" class="game-button" target="_blank" rel="noopener">Sandbox</a>
   <a href="Tsunami Survival!.html" class="game-button" target="_blank" rel="noopener">Tsunami Survival!</a>
   <a href="citysim.html" class="game-button" target="_blank" rel="noopener">Kareem's City Simulator</a>
+   <a href="banana.html" class="game-button" target="_blank" rel="noopener">Banana World (NEW!)</a>
 </div>
   <p>credits to impossible quiz for music</p>
 <div id="copyright" align="center">
@@ -142,6 +143,7 @@
 
 </body>
 </html>
+
 
 
 
