--- a/banana.html
+++ b/banana.html
@@ -46,7 +46,7 @@
 <button id="startBtn">Start</button>
 <audio id="music" src="banana.mp3"></audio>
 
-<img id="bananaMan" src="banana-man.png" style="display:none;"> <!-- Half-peeled banana avatar -->
+<img id="bananaMan" src="banana-man.gif" style="display:none;"> <!-- Half-peeled banana avatar -->
 
 <script>
 const startBtn = document.getElementById('startBtn');
