--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/png" href="k man.apng.png">
 <title>KareemWeb</title>
 <style>
   @keyframes rainbowBG {
@@ -143,6 +144,7 @@
 
 </body>
 </html>
+
 
 
 
