--- a/index.html
+++ b/index.html
@@ -4,16 +4,38 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
   
-<link id="favicon" rel="icon" href="frame1.png">
+<link id="favicon" rel="icon" href="frame_apngframe01.png">
 
 <script>
-const frames = ['frame1.png', 'frame2.png', 'frame3.png']; // add all your frames
-let i = 0;
+const frames = [
+  'frame_apngframe01.png',
+  'frame_apngframe02.png',
+  'frame_apngframe03.png',
+  'frame_apngframe04.png',
+  'frame_apngframe05.png',
+  'frame_apngframe06.png',
+  'frame_apngframe07.png',
+  'frame_apngframe08.png',
+  'frame_apngframe09.png',
+  'frame_apngframe10.png',
+  'frame_apngframe11.png',
+  'frame_apngframe12.png',
+  'frame_apngframe13.png',
+  'frame_apngframe14.png',
+  'frame_apngframe15.png',
+  'frame_apngframe16.png',
+  'frame_apngframe17.png',
+  'frame_apngframe18.png',
+  'frame_apngframe19.png',
+  'frame_apngframe20.png',
+  'frame_apngframe21.png'
+];
 
+let i = 0;
 setInterval(() => {
-    document.getElementById('favicon').href = frames[i % frames.length];
-    i++;
-}, 150); // 150ms per frame, adjust speed as needed
+  document.getElementById('favicon').href = frames[i % frames.length];
+  i++;
+}, 150); // 150ms per frame
 </script>
 
 <title>KareemWeb</title>
@@ -156,6 +178,7 @@ setInterval(() => {
 
 </body>
 </html>
+
 
 
 
