--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@ setInterval(() => {
     left: 0;
     width: 100%;
     height: 100%;
-    pointer-events: none; /* so clicks pass through */
-    z-index: 9999; /* on top */
+    pointer-events: none; 
+    z-index: 9999;
   }
   .canada-side {
     position: absolute;
     top: 0;
-    width: 100px; /* match your GIF width */
+    width: 270px;
     height: 100%;
     background-image: url('Canada.gif');
     background-repeat: repeat-y;
@@ -205,6 +205,7 @@ setInterval(() => {
 
 </body>
 </html>
+
 
 
 
