--- a/MusicPlayer.html
+++ b/MusicPlayer.html
@@ -53,6 +53,7 @@
     <option value="bgmusic.mp3">2. Kevin MacLeod - Elevator Music</option>
     <option value="impossiblemusic.mp3.mp3">3. Impossible Quiz</option>
     <option value="Kevin MacLeod - Airport Lounge.mp3">4. Kevin MacLeod - Airport Lounge</option>
+    <option value="O Canada.mp3">5. O Canada</option>
 </select>
 <button onclick="playSong()">Play</button>
 
