--- a/Posters.html
+++ b/Posters.html
@@ -186,7 +186,7 @@ async function addComment(index){
 
 // ----- INIT -----
 render();
-
+setInterval(render, 5000); // refresh feed every 5 seconds
 </script>
 </body>
 </html>
