--- a/Posters.html
+++ b/Posters.html
@@ -19,8 +19,8 @@
 <script>
 // ----- CONFIG -----
 const GITHUB_USERNAME = "kareemiismail";
-const GITHUB_REPO = "PostersAppToken";
-const GITHUB_TOKEN = "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"; // keep secret
+const GITHUB_REPO = "Posters";
+const GITHUB_TOKEN = "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";
 const POSTS_PATH = "posts"; // folder in repo where JSON files will be stored
 
 // ----- UTILS -----
